objects/AvaAcctSeed__CBMsgBoxText__c.object
<CustomObject>
    <description>Custom Object that is used as a global variable to pass messages to the CBMessageBox Class for pseudo Dialog Box</description>
    <fields>
        <fullName>AvaAcctSeed__MsgBoxLine1__c</fullName>
        <label>MsgBoxLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__MsgBoxLine2__c</fullName>
        <label>MsgBoxLine2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__MsgBoxLine3__c</fullName>
        <label>MsgBoxLine3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__ReturnPage__c</fullName>
        <label>ReturnPage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CBMsgBoxText</label>
    <listViews>
        <fullName>AvaAcctSeed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CBMT-{0000}</displayFormat>
        <label>CBMsgBoxText Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBMsgBoxTexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>